gl33-master/src/test/deca/syntax/valid/others/testNotFalse.deca
/*

Teste la déclaration d'un booléen avec une opération not

Attention : si le fichier est modifié, il faut le vérifier à nouveau et
copier la sortie dans src/test/deca/valid/others/expected
*/

{
  boolean b = ! false ;
}